@@ -7,10 +7,10 @@ import java.util.HashSet;
 import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import ru.hse.soundmapping.models.Music;
+import ru.hse.soundmapping.daos.MusicDAO;
 import ru.hse.soundmapping.models.MusicalInstrument;
 import ru.hse.soundmapping.models.SynthPreset;
-import ru.hse.soundmapping.models.User;
+import ru.hse.soundmapping.daos.UserDAO;
 import ru.hse.soundmapping.services.MusicService;
 import ru.hse.soundmapping.services.PresetService;
 import ru.hse.soundmapping.services.PriceService;
@@ -48,8 +48,8 @@ class SoundMappingApplicationTests {
     @Test
     void testBuyMusic() {
         PriceService priceService = new PriceService();
-        User testUser = new User(6L, "fst@mail.ru", "password1", "Phil", "Green",
-                presets, new ArrayList<>(), songs, 500L, 5L, new HashSet<>(Collections.singletonList(User.Achievement.RATING_5_BEGINNER)));
+        UserDAO testUser = new UserDAO(6L, "fst@mail.ru", "password1", "Phil", "Green",
+                presets, new ArrayList<>(), songs, 500L, 5L, new HashSet<>(Collections.singletonList(UserDAO.Achievement.RATING_5_BEGINNER)));
         priceService.buyMusicSheets(testUser, instrumental1);
         Assertions.assertEquals(200L, testUser.getBalance());
         priceService.buyMusicSheets(testUser, song2);
@@ -75,20 +75,20 @@ class SoundMappingApplicationTests {
     @Test
     void testBestRatingAchievement() {
         PriceService priceService = new PriceService();
-        Assertions.assertEquals(User.Achievement.RATING_5_BEGINNER, priceService.getBestRatingAchievement(user1));
-        Assertions.assertEquals(User.Achievement.RATING_10_TALENTED, priceService.getBestRatingAchievement(user2));
+        Assertions.assertEquals(UserDAO.Achievement.RATING_5_BEGINNER, priceService.getBestRatingAchievement(user1));
+        Assertions.assertEquals(UserDAO.Achievement.RATING_10_TALENTED, priceService.getBestRatingAchievement(user2));
     }
 
     @Test
     void testWelcomeToTheJungle() {
-        User user = new User(4L, "third@mail.ru", "jspj2ja2", "July", "Brown",
+        UserDAO user = new UserDAO(4L, "third@mail.ru", "jspj2ja2", "July", "Brown",
                 new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), 0L, 0L, new HashSet<>());
         PriceService priceService = new PriceService();
 
         priceService.topUserBalance(user, 40);
-        Assertions.assertFalse(user.getAchievements().contains(User.Achievement.WELCOME_THE_JUNGLE));
+        Assertions.assertFalse(user.getAchievements().contains(UserDAO.Achievement.WELCOME_THE_JUNGLE));
         priceService.topUserBalance(user, 150);
-        Assertions.assertTrue(user.getAchievements().contains(User.Achievement.WELCOME_THE_JUNGLE));
+        Assertions.assertTrue(user.getAchievements().contains(UserDAO.Achievement.WELCOME_THE_JUNGLE));
     }
 
     @Test
@@ -108,8 +108,8 @@ class SoundMappingApplicationTests {
     @Test
     void testBuyMusicIfNotEnoughMoney() {
         PriceService priceService = new PriceService();
-        User testUser = new User(6L, "fst@mail.ru", "password1", "Phil", "Green",
-                presets, new ArrayList<>(), songs, 0L, 5L, new HashSet<>(Collections.singletonList((User.Achievement.RATING_5_BEGINNER))));
+        UserDAO testUser = new UserDAO(6L, "fst@mail.ru", "password1", "Phil", "Green",
+                presets, new ArrayList<>(), songs, 0L, 5L, new HashSet<>(Collections.singletonList((UserDAO.Achievement.RATING_5_BEGINNER))));
         Assertions.assertThrows(RuntimeException.class, () -> priceService.buyMusicSheets(testUser, song3));
     }
 
@@ -118,7 +118,7 @@ class SoundMappingApplicationTests {
         MusicService musicService = new MusicService();
         String sheetsUrl = "";
         musicService.addSheetsUser(user1, sheetsUrl, instrumental2);
-        Assertions.assertTrue(user1.getAchievements().contains(User.Achievement.CREATOR));
+        Assertions.assertTrue(user1.getAchievements().contains(UserDAO.Achievement.CREATOR));
     }
 
     @Test
@@ -135,17 +135,17 @@ class SoundMappingApplicationTests {
         userService.addFavouriteInstrument(user3, in1);
         userService.addFavouriteInstrument(user3, in2);
         userService.addFavouriteInstrument(user3, in3);
-        Assertions.assertTrue(user3.getAchievements().contains(User.Achievement.TALENTED_MUSICIAN));
+        Assertions.assertTrue(user3.getAchievements().contains(UserDAO.Achievement.TALENTED_MUSICIAN));
     }
 
     private SynthPreset preset1 = new SynthPreset(0L, "Wave", 1.0, 1.0, 1.0, 1.0,
-            1.0, 1.0, 1.0, SynthPreset.Polyphony.POLYPHONIC, false, 10);
+            1.0, 1.0, 1.0, "POLYPHONIC", false, 10);
     private SynthPreset preset2 = new SynthPreset(1L, "Smooth", 1.0, 1.0, 1.0, 1.0,
-            1.0, 1.0, 1.0, SynthPreset.Polyphony.POLYPHONIC, true, 20);
+            1.0, 1.0, 1.0, "POLYPHONIC", true, 20);
     private SynthPreset preset3 = new SynthPreset(2L, "", 1.0, 1.0, 1.0, 1.0,
-            1.0, 1.0, 1.0, SynthPreset.Polyphony.POLYPHONIC, false, 30);
+            1.0, 1.0, 1.0, "POLYPHONIC", false, 30);
     private SynthPreset preset4 = new SynthPreset(3L, "Wave", 1.0, 1.0, 1.0, 1.0,
-            1.0, 1.0, 1.0, SynthPreset.Polyphony.POLYPHONIC, true, 35);
+            1.0, 1.0, 1.0, "POLYPHONIC", true, 35);
     private List<SynthPreset> presets = Arrays.asList(preset1, preset2, preset3, preset4);
 
     private MusicalInstrument in1 = new MusicalInstrument("Guitar", false);
@@ -153,27 +153,27 @@ class SoundMappingApplicationTests {
     private MusicalInstrument in3 = new MusicalInstrument("Synth", true);
     private List<MusicalInstrument> ins = Arrays.asList(in1, in2, in3);
 
-    private Music song1 = new Music(0L, Music.MusicType.SONG, "Pop", presets, "Blinding Lights",
+    private MusicDAO song1 = new MusicDAO(0L, MusicDAO.MusicType.SONG, "Pop", presets, "Blinding Lights",
             "The Weeknd", Arrays.asList(in3), "https://example.com", 200, 5);
-    private Music song2 = new Music(1L, Music.MusicType.SONG, "Hip-Hop", Arrays.asList(preset1, preset4), "Stronger",
+    private MusicDAO song2 = new MusicDAO(1L, MusicDAO.MusicType.SONG, "Hip-Hop", Arrays.asList(preset1, preset4), "Stronger",
             "Kanye West", Arrays.asList(in3), "https://example.com", 50, 3);
-    private Music song3 = new Music(2L, Music.MusicType.SONG, "Hip-Hop", List.of(preset3), "Nonstop",
+    private MusicDAO song3 = new MusicDAO(2L, MusicDAO.MusicType.SONG, "Hip-Hop", List.of(preset3), "Nonstop",
             "Drake", Arrays.asList(in3), "https://example.com", 100, 1);
-    private List<Music> songs = Arrays.asList(song1, song2, song3);
+    private List<MusicDAO> songs = Arrays.asList(song1, song2, song3);
 
-    private Music instrumental1 = new Music(3L, Music.MusicType.INSTRUMENTAL, "Neoclassicism", presets, "Experience",
+    private MusicDAO instrumental1 = new MusicDAO(3L, MusicDAO.MusicType.INSTRUMENTAL, "Neoclassicism", presets, "Experience",
             "Ludovico Einaudi", Collections.singletonList(in2), "https://example.com", 300, 5);
-    private Music instrumental2 = new Music(4L, Music.MusicType.INSTRUMENTAL, "Fonk", presets, "Close Eyes",
+    private MusicDAO instrumental2 = new MusicDAO(4L, MusicDAO.MusicType.INSTRUMENTAL, "Fonk", presets, "Close Eyes",
             "DVRST", Collections.singletonList(in3), "https://example.com", 0, 0);
-    private List<Music> instrumentals = Arrays.asList(instrumental1, instrumental2);
+    private List<MusicDAO> instrumentals = Arrays.asList(instrumental1, instrumental2);
 
 
-    private User user1 = new User(1L, "fst@mail.ru", "password1", "Phil", "Green",
-            presets, new ArrayList<>(), songs, 0L, 5L, new HashSet<>(Collections.singletonList(User.Achievement.RATING_5_BEGINNER)));
-    private User user2 = new User(2L, "snd@mail.ru", "password2", "Jack", "Black",
-            presets, ins, songs, 100L, 10L, new HashSet<>(Arrays.asList(User.Achievement.RATING_10_TALENTED, User.Achievement.WELCOME_THE_JUNGLE)));
-    private User user3 = new User(2L, "thd@mail.ru", "password3", "Nick", "White",
-            new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), 50L, 0L, new HashSet<>(Collections.singletonList(User.Achievement.WELCOME_THE_JUNGLE)));
-    private final List<User> users = List.of(user1, user2, user3);
+    private UserDAO user1 = new UserDAO(1L, "fst@mail.ru", "password1", "Phil", "Green",
+            presets, new ArrayList<>(), songs, 0L, 5L, new HashSet<>(Collections.singletonList(UserDAO.Achievement.RATING_5_BEGINNER)));
+    private UserDAO user2 = new UserDAO(2L, "snd@mail.ru", "password2", "Jack", "Black",
+            presets, ins, songs, 100L, 10L, new HashSet<>(Arrays.asList(UserDAO.Achievement.RATING_10_TALENTED, UserDAO.Achievement.WELCOME_THE_JUNGLE)));
+    private UserDAO user3 = new UserDAO(2L, "thd@mail.ru", "password3", "Nick", "White",
+            new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), 50L, 0L, new HashSet<>(Collections.singletonList(UserDAO.Achievement.WELCOME_THE_JUNGLE)));
+    private final List<UserDAO> users = List.of(user1, user2, user3);
 
 }
